KCM/mouse: enable compatibility with x11-libinput 1.3

The new version of libinput added an additional mouse acceleration
profile, so our checks were too restrictive and settings were not
applied.

BUG: 468217
(cherry picked from commit 2a1ea4d02bc3fd90bf63099ba6752eb23808dff7)